// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matchs snapshot 1 1`] = `
<button
  className="button"
  data-testid="button"
  onClick={[MockFunction]}
  style={
    Object {
      "backgroundColor": "blue",
    }
  }
>
  click
</button>
`;

exports[`Button matchs snapshot 2 1`] = `
<button
  className="button"
  data-testid="button"
  onClick={[MockFunction]}
  style={
    Object {
      "backgroundColor": "green",
    }
  }
>
  save
</button>
`;
